tests/invalid/bug117.err_exp
bug117.m:022: In clause for `extract(in) = out((list.non_empty_list))':
bug117.m:022:   mode error: argument 2 did not get sufficiently instantiated.
bug117.m:022:   Final instantiatedness of `X' was `ground',
bug117.m:022:   expected final instantiatedness was
bug117.m:022:     named inst list.non_empty_list,
bug117.m:022:     which expands to
bug117.m:022:     bound(
bug117.m:022:       '[|]'(ground, ground)
bug117.m:022:     ).
